# mcp-for-splunk

./: .bandit  .env.lab  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .semgrep.yml  .semgrepignore  .trivyignore  CHANGELOG.md  Dockerfile  PR_TEST.md  README.md  SECURITY.md  a2as.yaml  bug.md  docker-compose-dev.yml  docker-compose-splunk.yml  docker-compose.yml  env.example  env.lab  lab_execution.md  logs.mcp_server.out  pyproject.toml  release-please-config.json  renovate.json
.github/: CODEOWNERS  dependabot.yml
.github/release-please/: release-please-config.json  release-please-manifest.json
.github/workflows/: auto-fix-ci.yml  auto-merge-release-please.yml  ci.yml  cursor-code-review.yml  docker.yml  lint.yml  release-please.yml  release.yml  security.yml  smart-install-ci.yml  test.yml
_labs/: create-your-custom-mcp-tool.md  set-up-your-mcp-server-for-splunk.md
contrib/premium_template/: Dockerfile  README.md  pyproject.toml
contrib/premium_template/.github/workflows/: test.yml
contrib/premium_template/src/premium_server/: plugins.py
contrib/premium_template/tests/: test_auth_plugin.py
contrib/scripts/: generate_tool.py  list_tools.py
contrib/tools/examples/: hello_world.py  hello_world_v2.py  hello_world_v3.py  lab_guide_test.py
docs/: README.md  WINDOWS_GUIDE.md
docs/getting-started/: README.md  installation.md
docs/guides/: authentication.md  create_dashboard_tool.md  itsi_mcp.md  itsi_service_creation_review.md  phoenix-tracing-guide.md  plugins.md  search_job_info_tool.md
docs/guides/configuration/: client_configuration.md
docs/guides/itsi/: 2026-06-02-schema-tooling-design.md  README.md  deployment.md  getting-started.md  user-guide.md
docs/guides/workflows/: missing_data_troubleshooting.md
docs/reference/: dashboard_studio_cheatsheet.md
docs/security/: SVD-2025-1210-ANALYSIS.md
docs/superpowers/plans/: 2026-05-07-itsi-mcp-plugin-implementation.md
docs/superpowers/specs/: 2026-05-07-fastmcp-modernization-design.md  2026-05-07-itsi-mcp-plugin-design.md
marketing/linkedin/: leadership-ic.md  practitioners.md
marketing/reddit/: post.md
marketing/twitter/: thread.md
mcp_itsi/: Dockerfile  README.md  __init__.py  __main__.py  _version.py  cli.py  llms.txt  plugin.py  server.py
mcp_itsi/client/: __init__.py  endpoints.py  http_client.py
mcp_itsi/config/: __init__.py  headers.py  settings.py
mcp_itsi/core/: __init__.py  base.py  context.py  registration.py  responses.py
mcp_itsi/knowledge/: __init__.py  catalog.py
mcp_itsi/knowledge/content/: best_practices.md  entity_integrations.md  event_analytics.md  modules.md  overview.md  service_insights.md
mcp_itsi/knowledge/schema/: __init__.py  examples.py  models.py  registry.py  validator.py
mcp_itsi/prompts/: __init__.py  episode_triage.py  kpi_design.py  service_onboarding.py
mcp_itsi/resources/: __init__.py  docs_resource.py  llms_resource.py  schema_resource.py
mcp_itsi/tools/: __init__.py  _event_ops.py  _itoa_ops.py  _validation.py  aggregation_policy.py  correlation_search.py  deep_dive.py  docs.py  entity.py  entity_type.py  event_management.py  glass_table.py  home_view.py  kpi_base_search.py  kpi_threshold_template.py  maintenance.py  meta.py  schema.py  service.py  service_template.py  team.py
opt-splunk/scheduler__nobody_c3BsdW5rX2FyY2hpdmVy__RMD5473cbac83d6c9db7_at_1756012620_1/: args.txt  info.csv  metadata.csv  peers.csv  search_telemetry.json  status.csv
packaging/mcp-itsi-server/: CHANGELOG.md  README.md  mcp_itsi  pyproject.toml
packaging/mcp-itsi-server/evals/: schema_tools_eval.xml
scripts/: README_test_headers.md  hot_reload.py  security_summary.py  smart-install.ps1  smart-install.sh  smoke_toolset_filter.py  test_env_vars.py  test_itsi_mcp.py  test_itsi_mcp_both_modes.py  test_itsi_mcp_crud.py  test_itsi_mcp_deep.py  test_itsi_plugin_isolation.py  test_itsi_service_creation_scenario.py  test_kvstore_collection_http.py  test_live_splunk_tools.py  test_mcp_simple.py  test_mcp_with_headers.py  test_setup.py
scripts/itsi_schema/: __init__.py  mapping.py  parse_schema_md.py  refresh.py  render_markdown.py
src/: server.py  splunk_client.py
src/bundled_docs/: __init__.py
src/cli/: build_and_run.py  stop_mcp.py  test_mcp_server.py
src/client/: splunk_client.py
src/core/: __init__.py  base.py  client_identity.py  enhanced_config_extractor.py  loader.py  phoenix_instrumentation.py  security_monitoring.py  sentry_integration.py  sentry_middleware.py  toolset_filter.py  utils.py
src/core/sentry/: config.py
src/prompts/: dashboard_studio_builder.md
src/resources/: dashboard_studio_content.py  dashboard_studio_docs.py  embedded.py  splunk_cim.py  splunk_config.py  splunk_docs.py
src/resources/processors/: html_processor.py
src/routes/: health.py
src/tools/: __init__.py
src/tools/admin/: config.py  me.py
src/tools/alerts/: alerts.py
src/tools/dashboards/: create_dashboard.py  studio_wrapper.py
src/tools/docs/: splunk_docs_tools.py
src/tools/kvstore/: collections.py  data.py
src/tools/metadata/: get_metadata.py  sources.py  sourcetypes.py
src/tools/resources/: __init__.py
src/tools/search/: job_info.py  job_message_parser.py  job_search.py  saved_search_tools.py
src/tools/workflows/: get_executed_workflows.py  list_workflows.py  workflow_builder.py  workflow_runner.py
tests/: conftest.py  test_admin_config_create.py  test_admin_guide_resource.py  test_check_splunk_available.py  test_dashboard_tools.py  test_factories.py  test_health_routes.py  test_itsi_registration.py  test_itsi_schema.py  test_job_info_tool.py  test_loader_tags.py  test_mcp_itsi.py  test_mcp_server.py  test_plugin_loader.py  test_resources_dashboard_studio.py  test_saved_search_namespace.py  test_spec_integration.py  test_spec_loader_integration.py  test_spec_reference.py  test_splunk_client.py  test_studio_wrapper.py  test_token_auth.py  test_toolset_filter.py  test_toolset_integration.py  test_workflow_runner.py
tests/security/: test_credentials_handling.py  test_http_surface.py
(+41 files in other folders)
