[project]
name = "mcp-splunk-premium"
version = "0.1.0"
description = "Premium extensions for MCP Server for Splunk"
requires-python = ">=3.10"
dependencies = [
"mcp-server-for-splunk>=0.2.1",
"fastmcp>=2.11.3",
"starlette>=0.37",
]

[project.entry-points."mcp_splunk.plugins"]
auth = "premium_server.plugins:setup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
